--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-  background-color:wheat;
+  background-color: wheat;
 }
 
 h1 {
@@ -8,17 +8,20 @@ h1 {
   text-align: center;
   font-family: 'Manjari', sans-serif;
   border:2px solid black;
+  text-align:center;
 }
 
 h2 {
   color: blue;
   text-align: left;
   border:5px solid red;
+  text-align:center;
 }
 
 p {
   font-size: 20px;
   border:2px solid green;
+  text-align:center;
 }
 img {
 height:900px;
